Fixes stretching/squashing of images on event cards.

--- a/app/styles/components/event-card.less
+++ b/app/styles/components/event-card.less
@@ -47,9 +47,12 @@
 }
 
 .EventCard-image {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
   border-radius: @border-radius-round;
-  overflow: hidden;
   height: 112px;
+  overflow: hidden;
   width: 112px;
   @media (max-width: @screen-xs-max) {
     float: left;
